--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,17 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "paths": {
+    "@mui/styled-engine": [
+        "./node_modules/@mui/styled-engine-sc"
+      ]
+    }
   },
   "include": [
     "src"
+  ],
+  "files": [
+    "src/styles/styled.d.ts"
   ]
 }
