--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
+    "sweetalert2": "^11.4.4",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
